--- a/com.tutanota.Tutanota.desktop
+++ b/com.tutanota.Tutanota.desktop
@@ -3,7 +3,7 @@ Version=1.0
 Type=Application
 Name=Tutanota
 Comment=Email client
-Exec=tutanota-desktop %U
+Exec=tutanota-desktop.sh %U
 Icon=com.tutanota.Tutanota
 MimeType=x-scheme-handler/mailto;
 Categories=Email;Network;
