--- a/com.tutanota.Tutanota.yaml
+++ b/com.tutanota.Tutanota.yaml
@@ -22,6 +22,7 @@ build-options:
   env:
     NPM_CONFIG_LOGLEVEL: info
 modules:
+- shared-modules/libsecret/libsecret.json
 - name: tutanota
   build-options:
     env:
