--- a/com.tutanota.Tutanota.yaml
+++ b/com.tutanota.Tutanota.yaml
@@ -43,6 +43,8 @@ modules:
   build-commands:
   - |
     . /usr/lib/sdk/node10/enable.sh
+    chattr +i package-lock.json
+    chmod ugo-wx package-lock.json
     npm install || exit 1
     node dist --custom-desktop-release || exit 1
 
