Update for the new name

--- a/com.tutanota.Tutanota.desktop
+++ b/com.tutanota.Tutanota.desktop
@@ -1,7 +1,7 @@
 [Desktop Entry]
 Version=1.2
 Type=Application
-Name=Tutanota
+Name=Tuta Mail
 GenericName=Email client
 GenericName[bs]=Mejl klijent
 GenericName[nl]=E-mail client
