--- a/com.tutanota.Tutanota.yml
+++ b/com.tutanota.Tutanota.yml
@@ -7,15 +7,22 @@ sdk: org.freedesktop.Sdk
 command: tutanota-desktop
 separate-locales: false
 finish-args:
+  # X11 performance
   - --share=ipc
+  # OpenGL rendering
   - --device=dri
+  # Access to wayland
   - --socket=wayland
+  # Access to X11
   - --socket=x11
+  # Audio Access
   - --socket=pulseaudio
+  # Network Access
   - --share=network
   - --talk-name=org.freedesktop.secrets
   - --talk-name=org.kde.StatusNotifierWatcher
   - --env=TMPDIR=/var/tmp
+  # File system Access
   - --filesystem=host:ro
   - --filesystem=xdg-desktop
   - --filesystem=xdg-documents
@@ -25,6 +32,7 @@ finish-args:
   - --filesystem=xdg-public-share
   - --filesystem=xdg-videos
   - --filesystem=xdg-run/keyring
+  # Allow advanced input methods
   - --talk-name=org.freedesktop.portal.Fcitx
 modules:
   - name: libsecret
