permissions: Allow printing
This should improve, possibly solve, https://github.com/flathub/com.tutanota.Tutanota/issues/91

--- a/com.tutanota.Tutanota.yml
+++ b/com.tutanota.Tutanota.yml
@@ -34,6 +34,8 @@ finish-args:
   - --filesystem=xdg-run/keyring
   # Allow advanced input methods
   - --talk-name=org.freedesktop.portal.Fcitx
+  # Allow printing
+  - --socket=cups
 modules:
   - name: libsecret
     buildsystem: meson
