permissions: Allow U2F and FIDO2 keys
This should improve, possibly solve, https://github.com/flathub/com.tutanota.Tutanota/issues/90

--- a/com.tutanota.Tutanota.yml
+++ b/com.tutanota.Tutanota.yml
@@ -22,6 +22,8 @@ finish-args:
   - --talk-name=org.freedesktop.secrets
   - --talk-name=org.kde.StatusNotifierWatcher
   - --env=TMPDIR=/var/tmp
+  # Allow FIDO2/Smartcard Access
+  - --socket=pcsc
   # File system Access
   - --filesystem=host:ro
   - --filesystem=xdg-desktop
